test/functions/intents/out/out-array-elt-mismatch.good
out-array-elt-mismatch.chpl:1: In function 'f':
out-array-elt-mismatch.chpl:1: error: array element type mismatch in return from real(64) to int(64)
